--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                         </li>
                         <li class="team-members__item">
                             <img srcset="./images/member4.jpg 1x, ./images/member4@2x.jpg 2x" src="./images/member4.jpg" class="team-members__photo" width="450"
-                                alt="Дизайнер пользовательского интерфейса Михаил Ермаков">
+                                alt="Дизайнер юзер интерфейса Михаил Ермаков">
                             <div class="team-members__info">
                                 <h3 class="team-members__name">Михаил Ермаков</h3>
                                 <p class="team-members__position">UI Designer</p>
